--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "nextfire-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.2",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"name": "nextfire-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"firebase": "^9.15.0",
+		"lodash.debounce": "^4.0.8",
+		"lodash.kebabcase": "^4.1.1",
+		"next": "13.1.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-firebase-hooks": "^5.1.1",
+		"react-hook-form": "^7.42.1",
+		"react-hot-toast": "^2.4.0",
+		"react-markdown": "^8.0.4"
+	}
 }
